add new website from server na

--- a/xem-phim-moi/diem-bao-cua-quy/index.html
+++ b/xem-phim-moi/diem-bao-cua-quy/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huong-ve-cuoc-song-mua-4" title="Hướng Về Cuộc Sống – Mùa 4">
+          <a class="list-top-movie-link" href="/phim-moi/chiec-bua-quyen-nang" title="Chiếc Búa Quyền Năng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-ve-cuoc-song-mua-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chiec-bua-quyen-nang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hướng Về Cuộc Sống – Mùa 4
+             Chiếc Búa Quyền Năng
             </span>
             <span class="list-top-movie-item-en">
-             Hướng Về Cuộc Sống - Mùa 4
+             Almighty Thor
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vo-cua-trum-xa-hoi-den-bi-bat-coc" title="Vợ Của Trùm Xã Hội Đen Bị Bắt Cóc">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-cua-trum-xa-hoi-den-bi-bat-coc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vợ Của Trùm Xã Hội Đen Bị Bắt Cóc
+            </span>
+            <span class="list-top-movie-item-en">
+             사이판 로맨스 복수의 칼
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1799,87 +1821,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-them-lan-nua" title="Yêu Thêm Lần Nữa">
+          <a class="list-top-movie-link" href="/phim-moi/thien-cuc-cua-toi" title="Thiên Cực Của Tôi">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-them-lan-nua-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-cuc-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Thêm Lần Nữa
+             Thiên Cực Của Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Individual Circumstances
+             Sky In Your Heart
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhan-sinh-giong-nhu-thuo-dau-gap-go" title="Nhân Sinh Giống Như Thuở Đầu Gặp Gỡ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-sinh-giong-nhu-thuo-dau-gap-go-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhân Sinh Giống Như Thuở Đầu Gặp Gỡ
+            </span>
+            <span class="list-top-movie-item-en">
+             A Love Never Lost
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ke-san-dem-2" title="Kẻ Săn Đêm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-san-dem-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Kẻ Săn Đêm
+            </span>
+            <span class="list-top-movie-item-en">
+             Nocturnal Animals
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lac-du-nguyen" title="Lạc Du Nguyên">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lac-du-nguyen-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lạc Du Nguyên
-            </span>
-            <span class="list-top-movie-item-en">
-             Wonderland of Love
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ga-trai-hu" title="Những gã trai hư">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ga-trai-hu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những gã trai hư
-            </span>
-            <span class="list-top-movie-item-en">
-             Bad Boys
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-co-tich-thieu-nu-thoi-taisho" title="Truyện Cổ Tích Thiếu Nữ Thời Taisho">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-co-tich-thieu-nu-thoi-taisho-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Truyện Cổ Tích Thiếu Nữ Thời Taisho
-            </span>
-            <span class="list-top-movie-item-en">
-             Taishou Otome Otogibanashi
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
