add new website from server na

--- a/xem-phim-bo/phat-thanh-vien-thanh-that/index.html
+++ b/xem-phim-bo/phat-thanh-vien-thanh-that/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giao-dich-sinh-tu" title="Giao Dịch Sinh Tử">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-dao-chich" title="Siêu Đạo Chích">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giao-dich-sinh-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-dao-chich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giao Dịch Sinh Tử
+             Siêu Đạo Chích
             </span>
             <span class="list-top-movie-item-en">
-             Retribution
+             Goemon
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-chung-tuoi-thanh-xuan-em-gai-xuat-hanh" title="Hội Chứng Tuổi Thanh Xuân: Em Gái Xuất Hành">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-chung-tuoi-thanh-xuan-em-gai-xuat-hanh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hội Chứng Tuổi Thanh Xuân: Em Gái Xuất Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             Rascal Does Not Dream of a Sister Venturing Out
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1799,18 +1821,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-giac-quy-bermuda" title="Tam Giác Quỷ Bermuda">
+          <a class="list-top-movie-link" href="/phim-moi/ke-trom-mat-trang-4" title="Kẻ Trộm Mặt Trăng 4">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-giac-quy-bermuda-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-trom-mat-trang-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tam Giác Quỷ Bermuda
+             Kẻ Trộm Mặt Trăng 4
             </span>
             <span class="list-top-movie-item-en">
-             Bermuda Tentacles
+             Despicable Me 4
+            </span>
+            <span class="list-top-movie-item-view">
+             7 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/mat-troi-chim-day-bien-nhung-nguoi-mang-hy-vong" title="Mặt trời chìm đáy biển: Những người mang hy vọng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-troi-chim-day-bien-nhung-nguoi-mang-hy-vong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mặt trời chìm đáy biển: Những người mang hy vọng
+            </span>
+            <span class="list-top-movie-item-en">
+             JAPAN SINKS: People of Hope
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1821,65 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/missing-in-action-2-the-beginning" title="Missing in Action 2: The Beginning">
+          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-o-california-anh-den-thanh-pho" title="Giáng sinh ở California: Ánh đèn thành phố">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/missing-in-action-2-the-beginning-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-o-california-anh-den-thanh-pho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Missing in Action 2: The Beginning
+             Giáng sinh ở California: Ánh đèn thành phố
             </span>
             <span class="list-top-movie-item-en">
-             Missing in Action 2: The Beginning
+             A California Christmas: City Lights
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-hoan-my" title="Câu chuyện hoàn mỹ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-hoan-my-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Câu chuyện hoàn mỹ
-            </span>
-            <span class="list-top-movie-item-en">
-             A Perfect Story
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-ho-tinh" title="Giang Hồ Tình">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-ho-tinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Giang Hồ Tình
-            </span>
-            <span class="list-top-movie-item-en">
-             Rich and Famous
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
