add new website from server na

--- a/xem-phim-bo/ho-yeu-tieu-hong-nuong-nguyet-hong-thien/index.html
+++ b/xem-phim-bo/ho-yeu-tieu-hong-nuong-nguyet-hong-thien/index.html
@@ -1201,7 +1201,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1704,7 +1704,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1725,62 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gai-thu-6" title="Gái Thứ 6">
+          <a class="list-top-movie-link" href="/phim-moi/vu-mat-tich-tai-ayotzinapa" title="Vụ mất tích tại Ayotzinapa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-thu-6-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vu-mat-tich-tai-ayotzinapa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gái Thứ 6
+             Vụ mất tích tại Ayotzinapa
             </span>
             <span class="list-top-movie-item-en">
-             Girl Friday
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-nangthip" title="Chuyện Tình Nangthip">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-nangthip-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện Tình Nangthip
-            </span>
-            <span class="list-top-movie-item-en">
-             Nang Eye
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-dac-nhiem-phan-5" title="Đội Đặc Nhiệm (Phần 5)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-dac-nhiem-phan-5-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đội Đặc Nhiệm (Phần 5)
-            </span>
-            <span class="list-top-movie-item-en">
-             SEAL Team (Season 5)
+             The 43
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1791,21 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuu-toi-oi-ma-oi" title="Cứu tôi! Ôi ma ơi">
+          <a class="list-top-movie-link" href="/phim-moi/mat-hieu-chuon-chuon" title="Mật Hiệu Chuồn Chuồn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-toi-oi-ma-oi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-hieu-chuon-chuon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cứu tôi! Ôi ma ơi
+             Mật Hiệu Chuồn Chuồn
             </span>
             <span class="list-top-movie-item-en">
-             Help me! Oh My Ghost
+             Dragonfly
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1813,18 +1769,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-dep-ngu-me" title="Người Đẹp Ngủ Mê">
+          <a class="list-top-movie-link" href="/phim-moi/pham-vi-ben-ngoai" title="Phạm Vi Bên Ngoài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-dep-ngu-me-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pham-vi-ben-ngoai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Đẹp Ngủ Mê
+             Phạm Vi Bên Ngoài
             </span>
             <span class="list-top-movie-item-en">
-             Sleeping Beauty
+             Outer Range
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-thue-mot-nguoi-tinh" title="Tôi Thuê Một Người Tình">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-thue-mot-nguoi-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Thuê Một Người Tình
+            </span>
+            <span class="list-top-movie-item-en">
+             Love Me Or Leave Me
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tuoi-18" title="Tuổi 18">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-18-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tuổi 18
+            </span>
+            <span class="list-top-movie-item-en">
+             A-Teen
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
